# tuidoist

./: LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tuidoist/: __init__.py  __main__.py  app.py
src/tuidoist/api/: client.py
src/tuidoist/config/: config.py
src/tuidoist/ui/: keybindings.py
src/tuidoist/ui/views/: onboarding.py  today.py
